# distributed-tracing

./: .gitattributes  .gitignore  LICENSE  README.md  api-doc.md  docker-compose.yaml  migrations.sh  run.sh  test.sh
consumer-node/: .dockerignore  Imagefile  README.md  nodemon.json  package.json  pnpm-lock.yaml
consumers/: .dockerignore  CMakeLists.txt  Imagefile  README.md  conanfile.txt  entry.sh
deploy/: config.yaml  docker-compose.yaml  kafka-compose.yaml  logs-compose.yaml
orders/: .dockerignore  Imagefile  README.md  pyproject.toml
orders/src/: README.md  server.py
orders/src/app/: __init__.py  app.py  main.py
orders/src/app/controllers/: __init__.py  order_controller.py  product_consumer_controller.py
orders/src/app/interfaces/: __init__.py  order_interface.py  product_interface.py
orders/src/app/models/: __init__.py  order_model.py  product_model.py
orders/src/app/orders/: __init__.py  order_controller.py  order_model.py  order_routes.py  order_service.py
orders/src/app/routes/: __init__.py  consumer_routes.py  order_routes.py  product_consumer_routes.py
orders/src/app/services/: __init__.py  order_service.py  product_service.py
orders/src/db/: __init__.py  connect.py
orders/src/migrations/: env.py
orders/src/migrations/versions/: 952e7f6ad343_creating_the_product_table.py  bb1ec8f19533_creating_the_order_table.py  f2dc618ea863_creating_order_table.py
orders/src/utils/: __init__.py  singleton.py  telemetry.py  telemetry_logs.py
products/: .dockerignore  Imagefile  README.md  go.mod  go.sum  main.go
test/: order.json  product.json  (+1 more)
(+29 files in other folders)
